objects/Pay_Rule_Holiday__c/Pay_Rule_Holiday__c.object-meta.xml
<CustomObject>
    <label>Holiday Pay Code</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holiday Pay Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>