objects/Pay_Rule_Holiday__c/fields/Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rule__c</fullName>
    <label>Pay Rule</label>
    <referenceTo>Pay_Rule__c</referenceTo>
    <relationshipName>Pay_Rule_Holidays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>